--- a/seahub/templates/nav_footer.html
+++ b/seahub/templates/nav_footer.html
@@ -1,13 +1,12 @@
 {% load i18n %}
-<a href="{{SITE_ROOT}}help/" target="_blank" class="item">{% trans "Help" %}</a>
-<a href="#" class="js-about item">{% trans "About" %}</a>
+<img src="{{ MEDIA_URL }}img/alibaba-information-platfrom.png" alt="" height="22" style="margin-right:auto;" />
+{% if request.LANGUAGE_CODE == 'zh-cn' or request.LANGUAGE_CODE == 'zh-tw' %}
+<a href="{{SITE_ROOT}}help/" target="_blank" class="item">帮助</a>
+{% else %}
+<a href="{{SITE_ROOT}}help/" target="_blank" class="item">Help</a>
+{% endif %}
 {% if enable_terms_and_conditions %}
 <a href="{{SITE_ROOT}}terms/" class="item">{% trans "Terms" %}</a>
 {% endif %}
-<a href="{% url 'download_client' %}" class="item last-item"><span aria-hidden="true" class="sf2-icon-monitor vam"></span> <span class="vam">{% trans "Clients" %}</span></a>
+<a href="{% url 'download_client' %}" class="item">{% trans "Clients" %}</a>
 
-<div class="about-content hide">
-    <p><img src="{{ MEDIA_URL }}{{ logo_path }}" title="{{ site_title }}" alt="logo" width="{{logo_width}}" height="{{logo_height}}" /></p>
-    <p>{% trans "Server Version: " %}{{ seafile_version }}<br/> © 2018 {% trans "Seafile" %}</p>
-    <p><a href="{% if LANGUAGE_CODE == 'zh-cn' %}http://seafile.com/about/{% else %}http://seafile.com/en/about/{% endif %}" target="_blank">{% trans "About Us" %}</a></p>
-</div>
