--- a/seahub/profile/templates/profile/user_profile.html
+++ b/seahub/profile/templates/profile/user_profile.html
@@ -5,27 +5,37 @@
 {% block header_css_class %}d-flex{% endblock %}
 
 {% block main_panel %}
-<div id="user-profile">
-{% if user %}
-    {% avatar user.username 64 %}
-    <p title="{{ nickname }}" class="user-profile-nickname ellipsis">{{ nickname }}</p>
-    <ul>
-        {% if d_profile %}
-        {% if d_profile.telephone %}
-        <li title="{{ d_profile.telephone }}" class="user-profile-info ellipsis">
-            <span class="user-profile-info-icon icon-phone fa-1x vam"></span>
-            <span class="vam">{{ d_profile.telephone }}</span>
-        </li>
-        {% endif %}
-        {% endif %}
-        <li title="{{ contact_email }}" class="user-profile-info ellipsis">
-            <span class="user-profile-info-icon icon-envelope fa-1x vam"></span>
-            <span class="vam">{{ contact_email }}</span>
-        </li>
-    </ul>
 
-{% else %}
-    {% avatar "" 64 %}
-{% endif %}
+<div id="user-profile">
+
+<img src="{{ personal_photo_url }}" title="{{ emp_name }}" width="64" height="64" class="avatar">
+
+<p title="{{ emp_name }}" class="user-profile-nickname ellipsis">{{ emp_name }}</p>
+<p title="{{ nick_name }}" class="user-profile-nickname ellipsis">{{ nick_name }}</p>
+
+<ul>
+    <li title="{{ work_no }}" class="user-profile-info ellipsis">
+        <span class="vam">{{ work_no }}</span>
+    </li>
+
+    {% if request.LANGUAGE_CODE == 'zh-cn' or request.LANGUAGE_CODE == 'zh-tw' %}
+
+    <li title="{{ post_name }}" class="user-profile-info ellipsis">
+        <span class="vam">{{ post_name }}</span>
+    </li>
+    <li title="{{ dept_name }}" class="user-profile-info ellipsis">
+        <span class="vam">{{ dept_name }}</span>
+    </li>
+
+    {% else %}
+    <li title="{{ post_name_en }}" class="user-profile-info ellipsis">
+        <span class="vam">{{ post_name_en }}</span>
+    </li>
+    <li title="{{ dept_name_en }}" class="user-profile-info ellipsis">
+        <span class="vam">{{ dept_name_en }}</span>
+    </li>
+    {% endif %}
+</ul>
 </div>
+
 {% endblock %}
