[alibaba custom] repo owner chain

--- a/seahub/templates/js/templates.html
+++ b/seahub/templates/js/templates.html
@@ -203,6 +203,10 @@
                     <th>{% trans "Last Update" %}</th>
                     <td><%= mtime_relative %></td>
                 </tr>
+                <tr>
+                    <th>{% trans "Owner" %}</th>
+                    <td id="owner-chain"><span class="loading-icon"></span></td>
+                </tr>
             </table>
         </div>
 
