--- a/seahub/templates/sysadmin/repo_transfer_form.html
+++ b/seahub/templates/sysadmin/repo_transfer_form.html
@@ -1,7 +1,11 @@
 {% load i18n %}
 <form id="repo-transfer-form" method="" action="" class="hide">{% csrf_token %}
     <h3>{% trans "Transfer Library"%}</h3>
+    {% if request.LANGUAGE_CODE == 'zh-cn' or request.LANGUAGE_CODE == 'zh-tw' %}
+    <p class="detail">{% trans "将资料库 %(lib_name)s 转让给:"%}</p>
+    {% else %}
     <p class="detail">{% trans "Transfer %(lib_name)s to:"%}</p>
+    {% endif %}
     <input type="hidden" name="email" /><br />
     <input type="hidden" name="repo_id" value="" />
     <p class="error hide"></p>
