--- a/seahub/templates/js/templates.html
+++ b/seahub/templates/js/templates.html
@@ -2126,11 +2126,19 @@
 </script>
 <script type="text/template" id="group-import-members-form-tmpl">
 <form enctype="multipart/form-data" method="post" action="">
-    <h3 id="dialogTitle">{% trans "Import group members from a CSV file" %}</h3>
+    {% if request.LANGUAGE_CODE == 'zh-cn' or request.LANGUAGE_CODE == 'zh-tw' %}
+    <h3 id="dialogTitle">从.csv文件批量导入团队成员</h3>
     <input type="file" name="file" />
-    <p class="tip">{% trans "File format: user@mail.com" %}</p>
+    <p class="tip">说明：将团队成员工号写入.csv纯文本文件，每行一个工号<br>例子：<br>101012<br>012345<br>101011<br>000311<br>......</p>
     <button type="submit" class="submit">{% trans "Submit" %}</button>
     <p class="error hide"></p>
+    {% else %}
+    <h3 id="dialogTitle">Import group members in batch via a .csv file</h3>
+    <input type="file" name="file" />
+    <p class="tip">Note: Take your team members' employee ID, and keep one ID each line<br>Example:<br>101012<br>012345<br>101011<br>000311<br>......</p>
+    <button type="submit" class="submit">{% trans "Submit" %}</button>
+    <p class="error hide"></p>
+    {% endif %}
 </form>
 </script>
 
