--- a/seahub/templates/sysadmin/useradmin_table.html
+++ b/seahub/templates/sysadmin/useradmin_table.html
@@ -55,9 +55,7 @@
         <td>
             {% if not is_admin_page %}
             <div class="user-role">
-                {% if user.is_guest %}
-                    <span class="user-role-cur-value">{% trans "Guest" %}</span>
-                {% elif user.is_default %}
+                {% if user.is_default %}
                     <span class="user-role-cur-value">{% trans "Default" %}</span>
                 {% else %}
                     <span class="user-role-cur-value">{{user.role}}</span>
@@ -66,7 +64,6 @@
             </div>
             <select name="role" class="user-role-select hide">
                 <option value={{default_user}} {%if user.is_default %}selected="selected"{% endif %}>{% trans "Default" %}</option>
-                <option value={{guest_user}} {%if user.is_guest %}selected="selected"{% endif %}>{% trans "Guest"%}</option>
                 {% for role in extra_user_roles %}
                 <option value={{role}} {%if user.role == role %}selected="selected"{% endif %}>{{ role }}</option>
                 {% endfor %}
@@ -139,10 +136,6 @@
         <td>
           {% if not user.is_self %}
           <a href="#" class="remove-user-btn op vh" data-url="{% url 'user_remove' user.email %}" data-target="{{ user.email }}">{% trans "Delete" %}</a>
-          <br />
-          {% if user.source == "DB" %}
-          <a href="#" class="reset-user-btn op vh" data-url="{% url 'user_reset' user.email %}" data-target="{{ user.email }}">{% trans "ResetPwd" %}</a>
-          {% endif %}
           <br />
           {% if is_admin_page %}
           <a href="#" data-url="{% url 'user_remove_admin' user.email %}" data-target="{{ user.email }}" class="revoke-admin-btn op vh">{% trans "Revoke Admin" %}</a>
