[social auth & notification] Add wechat work notification

--- a/seahub/profile/templates/profile/set_profile.html
+++ b/seahub/profile/templates/profile/set_profile.html
@@ -131,6 +131,29 @@
 </div>
 {% endif %}
 
+<div class="setting-item" id="social-auth">
+    <h3>{% trans "Social Login" %}</h3>
+
+      <ul>
+
+        <li>
+          {% if request.LANGUAGE_CODE == 'zh-cn' %}
+          企业微信
+          {% else %}
+          WeChat Work
+          {% endif %}
+
+          {% if social_connected %}
+          <a class="social-disconnect" href="#" data-url="{% url "social:disconnect" 'weixin-work' %}?next={{ social_next_page }}">{% trans "Disconnect" %}</a>
+          {% else %}
+          <a href="{% url "social:begin" 'weixin-work' %}?next={{ social_next_page }}">{% trans "Connect" %}</a>
+          {% endif %}
+        </li>
+
+      </ul>
+
+</div>
+
 <div class="setting-item" id="del-account">
     <h3>{% trans "Delete Account" %}</h3>
     <p class="txt-before-btn">{% trans "This operation will not be reverted. Please think twice!" %}</p>
@@ -252,5 +275,11 @@ $("#list-in-address-book input[type='checkbox']").on('change', function() {
         }
     });
 })();
+
+addConfirmTo($('.social-disconnect'), {
+    'title':"{% trans "Disconnect" %}",
+    'con':"{% trans "Are you sure you want to disconnect?" %}",
+    'post':true
+});
 </script>
 {% endblock %}
